# portable-jules

./: .bashrc.local  .env  .gitignore  Dockerfile  Dockerfile.u  LICENSE.md  README.md  devbox.json  jules.sh  jupytext.toml  pyproject.toml  requirements.in  requirements.txt
devbox/: .gitignore  Dockerfile  Dockerfile.u  devbox.json  jules.sh  setup.sh
devbox/examples/loobos/: analysis.py
devbox/scripts/: setup.sh
examples/loobos/: README.md  analysis.py  jules_water_resources.nml  output.nml  pft_params.nml
examples/loobos/config/: fire.nml  imogen.nml  jules_prnt_control.nml  jules_radiation.nml  jules_rivers.nml  jules_soil_biogeochem.nml  (+9 more)
namelists/point/: ancillaries.nml  drive.nml  imogen.nml  initial_conditions.nml  jules_hydrology.nml  jules_irrig.nml  jules_snow.nml  jules_soil.nml  jules_soil_biogeochem.nml  jules_surface.nml  jules_surface_types.nml  model_grid.nml  nveg_params.nml  output.nml  science_fixes.nml  timesteps.nml
notebooks/: plot_ascii.md  plot_netcdf.md
run/loobos/: ancillaries.nml  drive.nml  initial_conditions.nml  jules_deposition.nml  jules_hydrology.nml  jules_soil.nml  jules_surface.nml  jules_surface_types.nml  model_environment.nml
run/point/: ancillaries.nml  drive.nml  initial_conditions.nml  jules_hydrology.nml  jules_prnt_control.nml  jules_radiation.nml  jules_rivers.nml  jules_vegetation.nml  jules_water_resources.nml  output.nml  pft_params.nml  timesteps.nml
scripts/: hello.sh  jules_build.sh  jules_run.sh  jules_setup.sh  plot_jules_output.py
src/pjules/: __init__.py  binary.py  docker.py  udocker.py  utils.py
(+3 files in other folders)
